# local-llm-chat

./: .gitignore  CONFIG.md  EXAMPLES.md  LICENSE  MIGRATION_v2.md  PROJECT_STRUCTURE.md  QUICKSTART.md  RAG_GUIDE.md  RAG_SETUP.md  README.md  changelog.md  config.example.json  main.py  model_config.py  prompts.py  pyproject.toml  requirements-rag.txt  requirements.txt  test_document.txt  verify_cuda.py  verify_installation.py
src/local_llm_chat/: __init__.py  __main__.py  cli.py  client.py  config.json  config.py  model_config.py  prompts.py  rag_integration.py  utils.py
src/local_llm_chat/backends/: __init__.py  base.py  gguf_backend.py  transformers_backend.py
src/local_llm_chat/rag/: __init__.py  base.py  manager.py  raganything_backend.py  simple.py
tests/: __init__.py  test_model_config.py
